Added constructors and repository to staff and report pages. Added links to Rental and staff page in layout.

--- a/src/Pages/CDs/Index.cshtml
+++ b/src/Pages/CDs/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">CDs</h1>
-    <p>@Model.CD.ToString()</p>
+    <p>@Model.GetCdsAsJson()</p>
 </div>
