--- a/src/Pages/Staff/Create.cshtml
+++ b/src/Pages/Staff/Create.cshtml
@@ -1,4 +1,4 @@
 ﻿@page
-@model Archive.CDManagement.Frontend.Pages.Staff.CreateModel
+@model Archive.CDManagement.Frontend.Pages.Staff.CreateStaffModel
 @{
 }
