--- a/src/Pages/Staff/Edit.cshtml
+++ b/src/Pages/Staff/Edit.cshtml
@@ -1,4 +1,4 @@
 ﻿@page
-@model Archive.CDManagement.Frontend.Pages.Staff.EditModel
+@model Archive.CDManagement.Frontend.Pages.Staff.EditStaffModel
 @{
 }
