--- a/src/Pages/Shared/_Layout.cshtml
+++ b/src/Pages/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/CDs/Index">CDs</a>
                         </li>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Rentals/Index">Rentals</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Staff/Index">Staff</a>
                         </li>
