--- a/src/Pages/Staff/Edit.cshtml
+++ b/src/Pages/Staff/Edit.cshtml
@@ -1,4 +1,8 @@
-﻿@page
+﻿@page "{id:int}"
 @model Archive.CDManagement.Frontend.Pages.Staff.EditStaffModel
 @{
 }
+<div class="text-center">
+    <h1 class="display-4">Edit CD</h1>
+    <p>@Model.Staff.ToString()</p>
+</div>
