fixed typo on CDs Page.  Added Bindproperty to Pages/Rentals/Edit. Added OnPostRemove function.

--- a/src/Pages/CDs/Index.cshtml
+++ b/src/Pages/CDs/Index.cshtml
@@ -13,7 +13,7 @@
             <tr>
                 <th>ID</th>
                 <th>Title</th>
-                <th>Autho</th>
+                <th>Author</th>
                 <th>Section</th>
                 <th>X</th>
                 <th>Y</th>
