--- a/src/Pages/Rentals/Edit.cshtml
+++ b/src/Pages/Rentals/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@page 
+﻿@page "{id:int}"
 @model Archive.CDManagement.Frontend.Pages.Rentals.EditModel
 @{
     ViewData["Title"] = "Rentals Edit Page";
@@ -28,7 +28,6 @@
                 <th>Section</th>
                 <th>X</th>
                 <th>Y</th>
-
             </tr>
         </thead>
         <tbody>
