Added Jquery to try and support Drag and drop

--- a/src/Pages/CDs/Edit.cshtml
+++ b/src/Pages/CDs/Edit.cshtml
@@ -7,6 +7,7 @@
 <div>
     <h1 class="display-4">Edit CD</h1>
     <form method="post">
+        <div id="dropArea">Drop your movie image here.</div>
         <div asp-validation-summary="ModelOnly"></div>
         <div class="form-group">
             <label for="inputTitle">Title</label>
