--- a/src/Pages/CDs/Index.cshtml
+++ b/src/Pages/CDs/Index.cshtml
@@ -39,7 +39,7 @@
                 <td>
                     <a asp-page="./Edit" asp-route-id="@Cd.Id">Edit</a> |
                     <button type="submit" asp-page-handler="delete"
-                            asp-route-id="@Cd.Id">
+                            asp-route-cdId="@Cd.Id">
                         delete
                     </button>
                 </td>
