--- a/src/Pages/Staff/Create.cshtml
+++ b/src/Pages/Staff/Create.cshtml
@@ -1,4 +1,47 @@
 ﻿@page
 @model Archive.CDManagement.Frontend.Pages.Staff.CreateStaffModel
 @{
+    ViewData["Title"] = "Staff Create Page";
 }
+<div>
+    <h1 class="display-4">Create Staff Member</h1>
+    <form method="post">
+        <div class="form-group">
+            <label for="inputFirstName">First Name</label>
+            <input class="form-control" id="inputFirstName" asp-for="Staff.FirstName" aria-describedby="">
+            <small id="FirstNameHelp" asp-validation-for="Staff.FirstName"></small>
+        </div>
+        <div class="form-group">
+            <label for="inputLastName">Last Name</label>
+            <input class="form-control" id="inputSection" asp-for="Staff.LastName" aria-describedby="">
+            <small id="LastNameHelp" asp-validation-for="Staff.LastName"></small>
+        </div>
+        <div class="form-group">
+            <label for="Address">Address</label>
+            <input class="form-control" id="Address" asp-for="Staff.Address" aria-describedby="">
+            <small id="AddressHelp" asp-validation-for="Staff.Address"></small>
+        </div>
+        <div class="form-group">
+            <label for="inputmail">Email</label>
+            <input class="form-control" id="Email" asp-for="Staff.Email" aria-describedby="">
+            <small id="EmailHelp" asp-validation-for="Staff.Email"></small>
+        </div>
+        <div class="form-group">
+            <label for="inputMobileNumber">MobileNumber</label>
+            <input class="form-control" id="inputMobileNumber" asp-for="Staff.MobileNumber" aria-describedby="">
+            <small id="MobileHelp" asp-validation-for="Staff.MoblieNumber"></small>
+        </div>
+        <div>
+            <label for="inputIsActive">Is Active?</label>
+            <div>
+                <input type="checkbox" id="Active" name="Active" value="Active">
+            </div>
+        </div>
+        <div>
+            <input type="submit" />
+        </div>
+    </form>
+</div>
+<script src="~/lib/jquery/dist/jquery.js"></script>
+<script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
