--- a/src/Pages/Staff/Edit.cshtml
+++ b/src/Pages/Staff/Edit.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = "Staff Edit Page";
 }
 <div>
-    <h1 class="display-4">Edit CD</h1>
+    <h1 class="display-4">Edit Staff</h1>
         <div class="form-group">
             <label for="inputTitle">First Name Edit</label>
             <input class="form-control" id="inputTitle" asp-for="Staff.FirstName" aria-describedby="titleHelp">
