--- a/src/Pages/Staff/Create.cshtml
+++ b/src/Pages/Staff/Create.cshtml
@@ -33,9 +33,10 @@
         </div>
         <div>
             <label for="inputIsActive">Is Active?</label>
-            <div>
-                <input type="checkbox" id="Active" name="Active" value="Active">
-            </div>
+        <div>
+            <input type="checkbox" id="Active" name="Active" value="Staff.Active" asp-for="Staff.Active"/>
+        <input type="submit" />
+</div>
         </div>
         <div>
             <input type="submit" />
