--- a/src/Pages/Rentals/Create.cshtml
+++ b/src/Pages/Rentals/Create.cshtml
@@ -7,16 +7,14 @@
 <div>
     <h1 class="display-4">Create Rental</h1>
     <form method="post">
-        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Add Staff ID
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            @foreach (var Id in Model.StaffId)
-            {
-                <button class="dropdown-item" asp-page-handler="Add Staff"
-                        asp-route-id="@Model.StaffId" asp-route-StaffId="@Model.StaffId">
-                </button>
-            }
+        <div class="form-group">
+            <label for="staffMemberSelect">Select Staff Member</label>
+            <select class="form-control" id="staffMemberSelect" asp-for="Rental.StaffId">
+                @foreach (var Staff in Model.StaffIds)
+                {
+                    <option value="@Staff.Id">@Staff.FirstName</option>
+                }
+            </select>
         </div>
         <div class="form-group">
             <label for="inputSection">Staff First Name</label>
@@ -35,7 +33,7 @@
         </div>
         <input type="submit" />
     </form>
-    </div>
+</div>
 <script src="~/lib/jquery/dist/jquery.js"></script>
 <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
