Added report 2D graphs. Added Export To CSV for report page, CDs And Staff members. added dropdowns for reports page.

--- a/src/Pages/CDs/Index.cshtml
+++ b/src/Pages/CDs/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="text-center">
 </div>
 <form method="post">
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Add CD</a>
     <table class="table">
         <thead>
             <tr>
