--- a/src/Pages/Rentals/Index.cshtml
+++ b/src/Pages/Rentals/Index.cshtml
@@ -7,7 +7,15 @@
 <div>
 </div>
 <form method="post">
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Create Rental</a>
+    <label>Staff:</label>
+    <select>
+        <option>e.g. 1</option>
+    </select>
+    <label>CD:</label>
+    <select>
+        <option>e.g. 1</option>
+    </select>
     <table class="table">
         <thead>
             <tr>
@@ -23,21 +31,21 @@
         <tbody>
             @foreach (var Rental in Model.rentals)
             {
-            <tr>
-                <td>@Rental.Id</td>
-                <td>@Rental.RentalItems.Count</td>
-                <td>@Rental.StaffId</td>
-                <td>@Rental.Staff.FirstName @Rental.Staff.LastName</td>
-                <td>@Rental.DateRented</td>
-                <td>@Rental.DateReturned</td>
-                <td>
-                    <a asp-page="./Edit" asp-route-id="@Rental.Id">Edit</a> |
-                    <button type="submit" asp-page-handler="delete"
-                            asp-route-id="@Rental.Id">
-                        delete
-                    </button>
-                </td>
-            </tr>
+                <tr>
+                    <td>@Rental.Id</td>
+                    <td>@Rental.RentalItems.Count</td>
+                    <td>@Rental.StaffId</td>
+                    <td>@Rental.Staff.FirstName @Rental.Staff.LastName</td>
+                    <td>@Rental.DateRented</td>
+                    <td>@Rental.DateReturned</td>
+                    <td>
+                        <a asp-page="./Edit" asp-route-id="@Rental.Id">Edit</a> |
+                        <button type="submit" asp-page-handler="delete"
+                                asp-route-id="@Rental.Id">
+                            delete
+                        </button>
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
