--- a/src/Pages/Index.cshtml
+++ b/src/Pages/Index.cshtml
@@ -7,4 +7,11 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <form method="post">
+        <div class="form-group" style="align-content: center">
+            <label for="inputName">Enter Your Name:</label>
+            <input class="form-control" asp-for="@Model.UserName" id="inputName">
+        </div>
+        <input type="submit" />
+    </form>
 </div>
