--- a/src/Pages/Staff/Create.cshtml
+++ b/src/Pages/Staff/Create.cshtml
@@ -23,7 +23,7 @@
         </div>
         <div class="form-group">
             <label for="inputmail">Email</label>
-            <input class="form-control" id="Email" asp-for="Staff.Email" aria-describedby="">
+            <input class="form-control" id="xSection" asp-for="Staff.Email" aria-describedby="EmailHelp">
             <small id="EmailHelp" asp-validation-for="Staff.Email"></small>
         </div>
         <div class="form-group">
