--- a/src/Pages/Staff/Edit.cshtml
+++ b/src/Pages/Staff/Edit.cshtml
@@ -29,7 +29,7 @@
             <small id="AddressHelp" asp-validation-for="Staff.Address"></small>
         </div>
         <div class="form-group">
-            <label for="inputX">Email Edit</label>
+            <label for="inputemail">Email Edit</label>
             <input class="form-control" id="xSection" asp-for="Staff.Email" aria-describedby="EmailHelp">
             <small id="EmailHelp" asp-validation-for="Staff.Email"></small>
         </div>
